# KuiperHomework

./: .gitignore  README.md
Doc/: UseGtest.md  cpp_base.md  git_connect.md
hw1/: README.md
hw1/Doc/: UseArmadillo.md  UseGlog.md  UseGtest.md
hw1/testArmadillo/: CMakeLists.txt  testArmadillo.cc
hw1/testGlog/: CMakeLists.txt  testGlog.cc
hw1/testGtest/: CMakeLists.txt  testGtest.cc
hw2/: README.md
hw2/Doc/: cpp_base.md
hw2/include/data/: tensor.hpp
hw2/source/data/: tensor.cc
hw2/test/: CMakeLists.txt  testFill.cc  testPadding.cc
hw3/: README.md
hw3/Doc/: cpp_base2.md
hw3/source/data/: load_data.cc  tensor.cc
hw3/test/: testTensor.cc
hw4/: README.md
hw4/include/data/: tensor.hpp
hw4/include/layer/: layer.hpp  relu_layer.hpp
hw4/include/ops/: op.hpp
hw4/source/data/: load_data.cc
hw4/source/layer/: relu_layer.cc
hw4/source/ops/: op.cc  relu_op.cc
hw4/test/: CMakeLists.txt  testRelu.cc  testSigmoid.cc
hw5/: README.md
hw5/include/data/: load_data.hpp  tensor.hpp
hw5/include/factory/: layer_factory.hpp
hw5/include/layer/: maxpooling_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp
hw5/include/ops/: maxpooling_op.hpp  op.hpp  relu_op.hpp  sigmoid_op.hpp
hw5/include/runtime/: runtime_attr.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_parameter.hpp
hw5/source/data/: load_data.cc  tensor.cc
hw5/source/factory/: layer_factory.cc
hw5/source/layer/: layer.cc  maxpooling_layer.cc  relu_layer.cc  sigmoid_layer.cc
hw5/source/ops/: maxpooling_op.cc  relu_op.cc  sigmoid_op.cc
hw5/source/runtime/: runtime_ir.cc
hw5/test/: CMakeLists.txt  testLoadData.cc  testMaxpooling.cc  testSigmoid.cc
